[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Title" type="CenterContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 910.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cirruseng" type="TextureRect" parent="Title"]
margin_left = 259.0
margin_top = 45.0
margin_right = 601.0
margin_bottom = 174.0
texture = ExtResource( 1 )

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 270.0
margin_right = 910.0
margin_bottom = 490.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="Options"]
margin_top = 76.0
margin_right = 860.0
margin_bottom = 96.0
text = "Load game"

[node name="NewGame" type="Button" parent="Options"]
margin_top = 100.0
margin_right = 860.0
margin_bottom = 120.0
text = "New Game"

[node name="Quit" type="Button" parent="Options"]
margin_top = 124.0
margin_right = 860.0
margin_bottom = 144.0
text = "Quit"

[connection signal="pressed" from="Options/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Options/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
